<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1">

    <!-- Welcome Text Container -->

    <LinearLayout
        android:id="@+id/welcomeContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="48dp">

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Welcome to"
            android:fontFamily="@font/font2"
            android:textColor="@android:color/black"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/tvSentio"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Sentio!"
            android:fontFamily="@font/font2"
            android:textColor="@android:color/black"
            android:textSize="34sp"
            android:textStyle="bold" />

    </LinearLayout>

    <!-- Information Container -->

    <LinearLayout
        android:id="@+id/InformationBox"
        android:layout_width="351dp"
        android:layout_height="460dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/signup_bg"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeContainer"
        app:layout_constraintVertical_bias="0.44">

        <!-- Username Field -->
        <EditText
            android:id="@+id/SUsername"
            android:layout_width="294dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/union"
            android:drawablePadding="5dp"
            android:drawableTint="#3F51B5"
            android:hint="Username"
            android:inputType="textPersonName"
            android:textAlignment="viewStart" />

        <!-- Display Name field -->
        <EditText
            android:id="@+id/SDisplayName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/union"
            android:drawablePadding="5dp"
            android:drawableTint="#3F51B5"
            android:hint="Display Name"
            android:inputType="textPersonName"
            android:textAlignment="viewStart" />

        <!-- Email Field -->
        <EditText
            android:id="@+id/SEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/vector"
            android:drawablePadding="10dp"
            android:drawableTint="#3F51B5"
            android:hint="Email"
            android:inputType="textEmailAddress" />

        <!-- Mobile Number Field -->
        <EditText
            android:id="@+id/SMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/mobile"
            android:drawablePadding="8dp"
            android:drawableTint="#3F51B5"
            android:hint="Mobile Number"
            android:inputType="phone" />

        <!-- Password Field -->
        <EditText
            android:id="@+id/SPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="8dp"
            android:drawableTint="#3F51B5"
            android:hint="Password"
            android:inputType="textPassword" />

        <!-- Create Account Button -->
        <Button
            android:id="@+id/btnCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="#FDBEA6"
            android:text="Create Account"
            android:textColor="#000000" />

        <!-- Already have an account? Login text -->
        <TextView
            android:id="@+id/tvLoginPrompt"
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Already have an account? Login"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="14sp" />


    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottielogo"
        android:layout_width="245dp"
        android:layout_height="82dp"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/lottielogo"
        android:elevation="5dp"
        app:layout_constraintBottom_toTopOf="@+id/InformationBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:lottie_loop="true"
        app:layout_constraintTop_toBottomOf="@+id/welcomeContainer"/>



</androidx.constraintlayout.widget.ConstraintLayout>

