...
            android:drawablePadding="8dp"
            android:drawableTint="#3F51B5"
            android:hint="Password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="#FDBEA6"
            android:text="Login"
            android:textColor="#000000" />
...
